actualización del index

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     const titularesDiv = document.getElementById('titulares');
     const titularesPreguntaDiv = document.getElementById('titularesPregunta');
 
-    const API_BASE = "https://ig-newsmonitoring.onrender.com";
+    const API_BASE = "https://sf-monitoreo.onrender.com";
 
     async function cargarFechas(){
       try {
