--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     .brand .dot{width:10px; height:10px; border-radius:50%; background:var(--muted)}
     nav{margin-left:auto; display:flex; gap:8px; flex-wrap:wrap}
     nav a{color:var(--bg); text-decoration:none; font-weight:600; font-size:.95rem; padding:8px 12px; border:1px solid transparent; border-radius:10px; transition:.2s ease;}
-    nav a:hover{border-color:var(--bg); background:var(--brand-2)}
+    nav a:hover{border-color:var(--muted); background:var(--brand-2)}
 
     main{max-width:1100px; margin:96px auto 48px; padding:0 20px; background:transparent;}
 
