--- a/index.html
+++ b/index.html
@@ -224,20 +224,54 @@
       <div id="listaReportes" class="chips"></div>
     </section>
 
-    <!-- Sección de dashboards -->
-    <section id="dashboards" class="card row" style="margin-top:18px">
-      <!-- Dashboard Noticias -->
-      <div id="dashboard_noticias" style="margin-top:10px">
-        <iframe
-          src="https://public.tableau.com/views/SF_17652944168240/Recuentodenoticiasporpersonajetrmino?:language=es-ES&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"
-          width="100%"
-          height="800"
-          style="border-radius:14px;border:1px solid var(--border);overflow:hidden;"
-          frameborder="0"
-          allowfullscreen="true"
-        ></iframe>
-      </div>
-    </section>
+<section id="dashboards" class="card row" style="margin-top:18px">
+  <!-- Dashboard Noticias -->
+  <div id="dashboard_noticias" style="margin-top:10px">
+    <div class='tableauPlaceholder' id='viz1765309634149' style='position: relative'>
+      <noscript>
+        <a href='#'>
+          <img alt=' '
+               src='https://public.tableau.com/static/images/SF/SF_17652944168240/Recuentodenoticiasporpersonajetrmino/1_rss.png'
+               style='border: none' />
+        </a>
+      </noscript>
+      <object class='tableauViz' style='display:none;'>
+        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+        <param name='embed_code_version' value='3' />
+        <param name='site_root' value='' />
+        <param name='name' value='SF_17652944168240&#47;Recuentodenoticiasporpersonajetrmino' />
+        <param name='tabs' value='yes' />
+        <param name='toolbar' value='yes' />
+        <param name='static_image'
+               value='https://public.tableau.com/static/images/SF/SF_17652944168240/Recuentodenoticiasporpersonajetrmino/1.png' />
+        <param name='animate_transition' value='yes' />
+        <param name='display_static_image' value='yes' />
+        <param name='display_spinner' value='yes' />
+        <param name='display_overlay' value='yes' />
+        <param name='display_count' value='yes' />
+        <param name='language' value='es-ES' />
+      </object>
+    </div>
+    <script type='text/javascript'>
+      var divElement = document.getElementById('viz1765309634149');
+      var vizElement = divElement.getElementsByTagName('object')[0];
+      if (divElement.offsetWidth > 800) {
+        vizElement.style.width='100%';
+        vizElement.style.height=(divElement.offsetWidth*0.75)+'px';
+      } else if (divElement.offsetWidth > 500) {
+        vizElement.style.width='100%';
+        vizElement.style.height=(divElement.offsetWidth*0.75)+'px';
+      } else {
+        vizElement.style.width='100%';
+        vizElement.style.height='750px';
+      }
+      var scriptElement = document.createElement('script');
+      scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+      vizElement.parentNode.insertBefore(scriptElement, vizElement);
+    </script>
+  </div>
+</section>
+
   </main>
   <script>
     const fechaSelect = document.getElementById('fechaSelect');
