--- a/index.html
+++ b/index.html
@@ -164,8 +164,10 @@
         border: none; 
         border-bottom: 1px solid var(--border); 
         font-size: 1rem;
+        color: #000 !important;      /* 👈 ESTA LÍNEA NUEVA */
       }
     }
+
 
   </style>
 </head>
