cambios a etiqueta de chatbot

--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
     </div>
     <nav>
       <a href="#resumen">Resumen</a>
-      <a href="#preguntas">Preguntas</a>
+      <a href="#preguntas">Chatbot</a>
       <a href="#reporte">Reporte Semanal</a>
-      <a href="#dashboard_noticias">Noticias</a>
+      <a href="#dashboard_noticias">Dashboard de noticias</a>
     </nav>
   </header>
   <main>
@@ -212,7 +212,7 @@
     </section>
 
     <section id="preguntas" class="card row" style="margin-top:18px">
-      <h2>❓ Pregunta sobre las noticias</h2>
+      <h2>Chatbot de noticias</h2>
       <div class="controls">
         <input id="inputPregunta" type="text" placeholder="Ej. ¿Qué noticias hubo sobre Sergio Fajardo el 8 de diciembre?"/> 
         <button id="btnPreguntar" class="btn-primary">Consultar</button>
