cambios a etiqueta de chatbot_v2

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
       <!-- 📧 Campo para enviar por correo -->
       <div id="emailSection" class="card row" style="margin-top:18px">
-        <h3>📧 Recibir este reporte por correo</h3>
+        <h2>📧 Recibir este reporte por correo</h2>
         <div class="controls">
           <input id="inputEmail" type="email" placeholder="Escribe tu correo electrónico..." />
           <button id="btnEnviarEmail" class="btn-primary">Enviar</button>
@@ -212,7 +212,7 @@
     </section>
 
     <section id="preguntas" class="card row" style="margin-top:18px">
-      <h2>Chatbot de noticias</h2>
+      <h2>💬 Chatbot de noticias</h2>
       <div class="controls">
         <input id="inputPregunta" type="text" placeholder="Ej. ¿Qué noticias hubo sobre Sergio Fajardo el 8 de diciembre?"/> 
         <button id="btnPreguntar" class="btn-primary">Consultar</button>
@@ -229,6 +229,7 @@
 <section id="dashboards" class="card row" style="margin-top:18px">
   <!-- Dashboard Noticias -->
   <div id="dashboard_noticias" style="margin-top:10px">
+    <h2>📈 Dashboard de noticias</h2>
     <div class='tableauPlaceholder' id='viz1765309634149' style='position: relative'>
       <noscript>
         <a href='#'>
