--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     const titularesDiv = document.getElementById('titulares');
     const titularesPreguntaDiv = document.getElementById('titularesPregunta');
 
-    const API_BASE = "https://sf-monitoreo.onrender.com";
+    const API_BASE = "https://influence-enfragen.onrender.com";
 
     async function cargarFechas(){
       try {
