--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     body{
       margin:0; font-family:'Montserrat',system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
       color:var(--text); background: var(--muted);
+      overflow-x: hidden; /* ✅ evita scroll/desborde horizontal en móvil */
     }
     header{
       position:fixed; inset:0 0 auto 0; height:64px; z-index:1000; display:flex; align-items:center; gap:20px;
@@ -119,6 +120,13 @@
       button, select, input[type="text"], input[type="email"] {
         width: 100% !important;
         min-width: unset;
+      }
+      /* ✅ Arreglo texto en móvil (evita espacios enormes/overflow) */
+      .summary, #resumenTexto, #respuestaTexto {
+        text-align: left !important;   /* clave: no justify en pantallas angostas */
+        overflow-wrap: anywhere;
+        word-break: break-word;
+        hyphens: auto;
       }
     }
 
@@ -230,50 +238,16 @@
   <!-- Dashboard Noticias -->
   <div id="dashboard_noticias" style="margin-top:10px">
     <h2>📈 Dashboard de noticias</h2>
-    <div class='tableauPlaceholder' id='viz1765309634149' style='position: relative'>
-      <noscript>
-        <a href='#'>
-          <img alt=' '
-               src='https://public.tableau.com/static/images/SF/SF_17652944168240/Recuentodenoticiasporpersonajetrmino/1_rss.png'
-               style='border: none' />
-        </a>
-      </noscript>
-      <object class='tableauViz' style='width:100%; height:800px;'>
-        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-        <param name='embed_code_version' value='3' />
-        <param name='site_root' value='' />
-        <param name='name' value='SF_17652944168240&#47;Recuentodenoticiasporpersonajetrmino' />
-        <param name='tabs' value='yes' />
-        <param name='toolbar' value='yes' />
-        <param name='static_image'
-               value='https://public.tableau.com/static/images/SF/SF_17652944168240/Recuentodenoticiasporpersonajetrmino/1.png' />
-        <param name='animate_transition' value='yes' />
-        <param name='display_static_image' value='yes' />
-        <param name='display_spinner' value='yes' />
-        <param name='display_overlay' value='yes' />
-        <param name='display_count' value='yes' />
-        <param name='language' value='es-ES' />
-      </object>
-    </div>
-    <script type='text/javascript'>
-      var divElement = document.getElementById('viz1765309634149');
-      var vizElement = divElement.getElementsByTagName('object')[0];
-      if (divElement.offsetWidth > 800) {
-        vizElement.style.width='100%';
-        vizElement.style.height=(divElement.offsetWidth*0.75)+'px';
-      } else if (divElement.offsetWidth > 500) {
-        vizElement.style.width='100%';
-        vizElement.style.height=(divElement.offsetWidth*0.75)+'px';
-      } else {
-        vizElement.style.width='100%';
-        vizElement.style.height='750px';
-      }
-      var scriptElement = document.createElement('script');
-      scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-      vizElement.parentNode.insertBefore(scriptElement, vizElement);
-    </script>
+
+    <iframe
+      src="https://public.tableau.com/views/SF_17652944168240/Recuentodenoticiasporpersonajetrmino?:showVizHome=no"
+      style="width:100%; height:min(800px, 80vh); border:0; border-radius:14px;"
+      loading="lazy"
+      allowfullscreen
+    ></iframe>
   </div>
 </section>
+
 
   </main>
   <script>
