--- a/index.html
+++ b/index.html
@@ -128,6 +128,44 @@
         word-break: break-word;
         hyphens: auto;
       }
+      /* ✅ Evita desbordes generales en iOS/Safari */
+      html, body { max-width: 100%; overflow-x: hidden; }
+      main, .card, section { max-width: 100%; }
+
+      /* ✅ Los chips eran el principal causante del overflow */
+      .chip { 
+        flex-wrap: wrap; 
+        align-items: flex-start;
+      }
+
+      /* El link puede partirse */
+      .chip a {
+        overflow-wrap: anywhere;
+        word-break: break-word;
+        hyphens: auto;
+        flex: 1 1 100%;
+      }
+
+      /* El medio/dominio baja de línea (no empuja a la derecha) */
+      .chip small {
+        flex: 1 1 100%;
+        margin-left: 0;
+        white-space: normal;
+      }
+
+      /* ✅ La nube nunca debe exceder el contenedor */
+      #nubeWrap img {
+        max-width: 100% !important;
+        height: auto !important;
+        display: block;
+      }
+
+      /* ✅ Los controles (select/input/botones) en columna */
+      .controls { 
+        flex-direction: column;
+        align-items: stretch;
+}
+
     }
 
     /* 📱 Menú hamburguesa */
@@ -239,12 +277,12 @@
   <div id="dashboard_noticias" style="margin-top:10px">
     <h2>📈 Dashboard de noticias</h2>
 
-    <iframe
-      src="https://public.tableau.com/views/SF_17652944168240/Recuentodenoticiasporpersonajetrmino?:showVizHome=no"
-      style="width:100%; height:min(800px, 80vh); border:0; border-radius:14px;"
-      loading="lazy"
-      allowfullscreen
-    ></iframe>
+  <iframe
+    src="https://public.tableau.com/views/SF_17652944168240/Recuentodenoticiasporpersonaje?:showVizHome=no"
+    style="width:100%; height:min(800px, 80vh); border:0; border-radius:14px;"
+    loading="lazy"
+    allowfullscreen
+  ></iframe>
   </div>
 </section>
 
